--- a/_posts/2020-09-29-TestPage.md
+++ b/_posts/2020-09-29-TestPage.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      测试页
-subtitle:   函数式编程框架 ReactiveCocoa 进阶
+subtitle:   副标题
 date:       2020-09-29
 author:     zimingzpp
 header-img: img/post-bg-ios9-web.jpg
